[project]
name = "nasa-flood-extent-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.1.1",
    "ipykernel>=6.29.5",
    "scikit-learn>=1.5.2",
    "scikit-image>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
