[project]
name = "nasa-flood-extent-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.1.1",
    "ipykernel>=6.29.5",
    "tensorflow>=2.17.0",
    "opencv-python>=4.10.0.84",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
